--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                 <h3>Quick Links</h3>
                 <p><a href="#">Privacy Policy</a></p>
                 <p><a href="#">Terms of Service</a></p>
-                <p><a href="#">FAQs</a></p>
+                <p><a href="faq.html">FAQs</a></p>
                 <p><a href="#">About Us</a></p>
             </div>
             <div class="social-icons">
